<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

  <PreferenceCategory
      android:title="@string/pref__category__display"
      >

    <CheckBoxPreference
        android:key="pref__is_show_banner"
        android:title="@string/pref__is_show_banner__title"
        android:defaultValue="true"
        />

    <CheckBoxPreference
        android:key="pref__is_show_address"
        android:title="@string/pref__is_show_address__title"
        android:defaultValue="false"
        />

  </PreferenceCategory>

  <PreferenceCategory
      android:title="@string/pref__category__sort"
      >

    <ListPreference
        android:key="pref__sort_type_order"
        android:title="@string/pref__sort_type_order__title"
        android:defaultValue="none"
        android:entries="@array/pref__sort_type_order__entries"
        android:entryValues="@array/pref__sort_type_order__values"
        />

    <ListPreference
        android:key="pref__sort_desc_order"
        android:title="@string/pref__sort_desc_order__title"
        android:defaultValue="none"
        android:entries="@array/pref__sort_desc_order__entries"
        android:entryValues="@array/pref__sort_desc_order__values"
        />

  </PreferenceCategory>

  <!-- <PreferenceCategory -->
  <!--     android:title="About" -->
  <!--     > -->

  <!--   <Preference -->
  <!--       android:summary="" -->
  <!--       android:title="About application" -->
  <!--       /> -->

  <!-- </PreferenceCategory> -->

</PreferenceScreen>
